# opencloudtool

./: .git-branches.toml  .git-town.toml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  codecov.yml  oct.toml  pyproject.toml  requests.curl
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-task.yml  4-sub-issue.yml  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: pages.yml  postsubmit.yml  release-oct-ctl.yml  release-tag.yml  release-tip.yml  run-examples.yml  stale.yml
crates/ct-cli/: Cargo.toml
crates/ct-cli/src/: main.rs
crates/ct-cloud/: Cargo.toml
crates/ct-cloud/src/: aws.rs  lib.rs
crates/oct-cli/: AGENTS.md  Cargo.toml
crates/oct-cli/src/: config.rs  main.rs  oct_ctl_sdk.rs  user_state.rs
crates/oct-cli/tests/: cli.rs
crates/oct-cloud/: AGENTS.md  Cargo.toml
crates/oct-cloud/src/: aws.rs  aws_v2.rs  backend.rs  graph.rs  lib.rs  resource.rs  state.rs
crates/oct-cloud/src/aws/: client.rs  mod.rs  resource.rs  types.rs
crates/oct-cloud/src/infra/: graph.rs  mod.rs  resource.rs  state.rs
crates/oct-config/: AGENTS.md  Cargo.toml
crates/oct-config/src/: lib.rs
crates/oct-ctl/: AGENTS.md  Cargo.toml
crates/oct-ctl-sdk/: AGENTS.md  Cargo.toml
crates/oct-ctl-sdk/src/: lib.rs
crates/oct-ctl/src/: container.rs  executor.rs  main.rs  service.rs
crates/oct-graph/: Cargo.toml
crates/oct-graph/src/: graph.rs
crates/oct-orchestrator/: AGENTS.md  Cargo.toml
crates/oct-orchestrator/src/: backend.rs  config.rs  lib.rs  oct_ctl_sdk.rs  scheduler.rs  user_state.rs
crates/oct-platform/: AGENTS.md  Cargo.toml  GEMINI.md  README.md
crates/oct-platform/e2e/: biome.json  deno.json  fixtures.ts  package-lock.json  package.json  playwright.config.ts
crates/oct-platform/e2e/tests/: actions.spec.ts  add_services.spec.ts  delete_service.spec.ts  env_vars.spec.ts  index.spec.ts  mermaid_theme.spec.ts  projects.spec.ts  raw_config.spec.ts  state.spec.ts  streaming.spec.ts  theme.spec.ts
crates/oct-platform/src/: config_manager.rs  handlers.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  routes.rs
crates/oct-platform/templates/: base.html  index.html  repo.html
crates/oct-platform/templates/pages/: edit.html  index.html  projects.html  state.html
crates/oct-platform/templates/pages/projects/: edit.html  index.html
crates/oct-platform/templates/pages/repos/: index.html
crates/oct-platform/templates/partials/: service_row.html
crates/oct-platform/templates/shared/: base.html
crates/oct-py/: AGENTS.md  Cargo.toml  pyproject.toml
crates/oct-py/python/opencloudtool/: py_api.py
crates/oct-py/src/: lib.rs
crates/python/: README.md  pyproject.toml
crates/python/examples/http-server-with-dockerfile/: deploy.py  destroy.py  oct.toml
crates/python/oct/: __init__.py
crates/python/oct-py/: Cargo.toml
crates/python/oct-py/src/: lib.rs
docs/: design.excalidraw  high-level-design.excalidraw  oct-deploy-design.md  state_design.md  versions-design.excalidraw
docs/design/: README.md
examples/decentraland_stream/: Dockerfile  readme.md
examples/images/: README.md
examples/images/agent-remote/: Dockerfile  README.md  entrypoint.sh
examples/images/nginx-with-conf/: README.md  nginx-entrypoint.sh
examples/images/python-fastapi/: oct.toml
examples/nginx-with-conf/: Dockerfile
examples/projects/cs2-server/: README.md  oct.toml
examples/projects/fastapi-python-sdk/: README.md  deploy.py  destroy.py  pyproject.toml
examples/projects/fastapi-test/: clouder.py
examples/projects/http-server-with-dockerfile/: Dockerfile  oct.toml
examples/projects/http-server-with-multiple-dockerfiles/: Dockerfile.app_1  Dockerfile.app_2  oct.toml
examples/projects/inject-system-env-var/: README.md  oct.toml
examples/projects/multi-host-rest-service-with-lb/: oct.toml
examples/projects/ray-single-worker/: README.md  oct.toml  pyproject.toml
examples/projects/rest-service-with-domain/: oct.toml
examples/projects/s3-remote-state-storage/: oct.toml
examples/projects/single-host-multi-services-with-domains/: README.md  oct.toml
examples/projects/single-host-python-lib/: deploy.py  destroy.py  oct.toml
examples/projects/single-host-rest-service-with-lb/: oct.toml
examples/python-fastapi/: Dockerfile  README.md  main.py  oct.toml  pyproject.toml
frontend/: Cargo.toml
frontend/src/: main.rs
scripts/: install.sh  remote-claude.sh
skills/: AGENTS.md
skills/git-commit/: AGENTS.md  SKILL.md
