[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
oct-cloud = { path = "crates/oct-cloud" }
oct-orchestrator = { path = "crates/oct-orchestrator" }

assert_cmd = "2.0.16"
async-trait = "0.1.85"
aws-config = "1.5.16"
aws-sdk-ec2 = "1.110.0"
aws-sdk-ecr = "1.51.0"
aws-sdk-iam = "1.62.0"
axum = "0.8.1"
base64 = "0.22.1"
clap = { version = "4.5.30", features = ["derive"] }
predicates = "3.1.3"
serde = "1.0.217"
serde_derive = "1.0.213"
serde_json = "1.0.138"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["full"] }
mockall = "0.13.1"
mockito = "1.6.1"
uuid = { version = "1.13.1", features = ["v4"] }
log = "0.4.25"
env_logger = "0.11.6"
toml = "0.8.20"
reqwest = { version = "0.12.12", features = ["json"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
grcov = "0.8.20"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
# Without the hashes we run into a `rustfmt` bug in some snapshot tests, see #13250
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unwrap_used = "warn"
# Nursery rules
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
