[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
oct-cloud = { path = "crates/oct-cloud" }
oct-orchestrator = { path = "crates/oct-orchestrator" }

assert_cmd = "2.0.16"
async-trait = "0.1.88"
aws-config = "1.5.18"
aws-sdk-ec2 = "1.116.0"
aws-sdk-ecr = "1.67.0"
aws-sdk-iam = "1.64.0"
aws-sdk-route53 = "1.67.0"
aws-sdk-s3 = "1.78.0"
axum = "0.8.3"
base64 = "0.22.1"
clap = { version = "4.5.34", features = ["derive"] }
predicates = "3.1.3"
serde = "1.0.219"
serde_derive = "1.0.213"
serde_json = "1.0.140"
tempfile = "3.19.1"
tera = { git = "https://github.com/minev-dev/tera.git", rev = "1e36d2f8ba66833ce9ad2b46044e21f8240b5299" } # Contains custom logic to render variables ignoring unknown variables
tokio = { version = "1.44.1", features = ["full"] }
mockall = "0.13.1"
mockito = "1.7.0"
uuid = { version = "1.16.0", features = ["v4"] }
log = "0.4.27"
env_logger = "0.11.6"
toml = "0.8.20"
reqwest = { version = "0.12.15", features = ["json"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
grcov = "0.8.20"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
# Without the hashes we run into a `rustfmt` bug in some snapshot tests, see #13250
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unwrap_used = "warn"
# Nursery rules
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
