[package]
name = "oct-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
oct-orchestrator = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
