[package]
name = "oct-cli"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
oct-config = { workspace = true }
oct-orchestrator = { workspace = true }

clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
