[package]
name = "oct-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-iam = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mockall = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

[lints]
workspace = true
