[package]
name = "oct-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-iam = { workspace = true }
aws-sdk-ecr = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
