[package]
name = "oct-cloud"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-ecr = { workspace = true }
aws-sdk-iam = { workspace = true }
aws-sdk-route53 = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
