[package]
name = "oct-ctl-sdk"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
oct-config = { workspace = true }

log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }

[lints]
workspace = true
