[package]
name = "oct-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
