[package]
name = "oct-ctl"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
oct-cloud = { workspace = true }
oct-orchestrator = { workspace = true }

axum = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
