[package]
name = "oct-ctl"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
oct-cloud = { workspace = true }
oct-config = { workspace = true }
oct-orchestrator = { workspace = true }

axum = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
