[package]
name = "oct-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
oct-cloud = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tera = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
