[package]
name = "oct-platform"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "UI for opencloudtool"

[dependencies]
oct-cloud = { workspace = true }
oct-config = { workspace = true }
oct-orchestrator = { workspace = true }

async-trait = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower-livereload = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
mime = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
