[package]
name = "oct-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
oct-config = { workspace = true }
oct-orchestrator = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }

[lints]
workspace = true
